admission/ValidatingAdmissionPolicy/policies/selinux-role/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-namespace-optout-warn-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: e1f18272-580d-5cb8-91d0-8b4c8d45a563
  labels:
    pss.security.kolteq.com/warn: 'baseline-restricted'
    selinux-role.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role.security.kolteq.com/audit: 'false-true'
    selinux-role.security.kolteq.com/enforce: 'false-true'
spec:
  policyName: selinux-role
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/warn
        operator: In
        values:
        - baseline
        - restricted
      - key: selinux-role.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-namespace-optout-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: e1f18272-580d-5cb8-91d0-8b4c8d45a563
  labels:
    security.kolteq.com/warn: enabled
    selinux-role.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    selinux-role.security.kolteq.com/audit: 'false-true'
    selinux-role.security.kolteq.com/enforce: 'false-true'
spec:
  policyName: selinux-role
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/warn
        operator: In
        values:
        - enabled
      - key: selinux-role.security.kolteq.com/warn
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-namespace-optin-warn
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: e1f18272-580d-5cb8-91d0-8b4c8d45a563
  labels:
    selinux-role.security.kolteq.com/warn: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role.security.kolteq.com/audit: 'false-true'
    selinux-role.security.kolteq.com/enforce: 'false-true'
spec:
  policyName: selinux-role
  validationActions:
  - Warn
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: selinux-role.security.kolteq.com/warn
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-namespace-optout-audit-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: e1f18272-580d-5cb8-91d0-8b4c8d45a563
  labels:
    pss.security.kolteq.com/audit: 'baseline-restricted'
    selinux-role.security.kolteq.com/audit: 'false-true'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role.security.kolteq.com/enforce: 'false-true'
    selinux-role.security.kolteq.com/warn: 'false-true'
spec:
  policyName: selinux-role
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/audit
        operator: In
        values:
        - baseline
        - restricted
      - key: selinux-role.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-namespace-optout-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: e1f18272-580d-5cb8-91d0-8b4c8d45a563
  labels:
    security.kolteq.com/audit: enabled
    selinux-role.security.kolteq.com/audit: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role.security.kolteq.com/enforce: 'false-true'
    selinux-role.security.kolteq.com/warn: 'false-true'
spec:
  policyName: selinux-role
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/audit
        operator: In
        values:
        - enabled
      - key: selinux-role.security.kolteq.com/audit
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-namespace-optin-audit
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: e1f18272-580d-5cb8-91d0-8b4c8d45a563
  labels:
    selinux-role.security.kolteq.com/audit: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role.security.kolteq.com/enforce: 'false-true'
    selinux-role.security.kolteq.com/warn: 'false-true'
spec:
  policyName: selinux-role
  validationActions:
  - Audit
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: selinux-role.security.kolteq.com/audit
        operator: In
        values:
        - 'true'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-namespace-optout-deny-pss
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: e1f18272-580d-5cb8-91d0-8b4c8d45a563
  labels:
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    selinux-role.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role.security.kolteq.com/audit: 'false-true'
    selinux-role.security.kolteq.com/warn: 'false-true'
spec:
  policyName: selinux-role
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: pss.security.kolteq.com/enforce
        operator: In
        values:
        - baseline
        - restricted
      - key: selinux-role.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-namespace-optout-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: e1f18272-580d-5cb8-91d0-8b4c8d45a563
  labels:
    security.kolteq.com/enforce: enabled
    selinux-role.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/warn: enabled
    selinux-role.security.kolteq.com/audit: 'false-true'
    selinux-role.security.kolteq.com/warn: 'false-true'
spec:
  policyName: selinux-role
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: security.kolteq.com/enforce
        operator: In
        values:
        - enabled
      - key: selinux-role.security.kolteq.com/enforce
        operator: NotIn
        values:
        - 'false'
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: selinux-role-namespace-optin-deny
  annotations:
    policies.kolteq.com/validatingAdmissionPolicy: e1f18272-580d-5cb8-91d0-8b4c8d45a563
  labels:
    selinux-role.security.kolteq.com/enforce: 'false-true'
    pss.security.kolteq.com/audit: 'baseline-restricted'
    pss.security.kolteq.com/enforce: 'baseline-restricted'
    pss.security.kolteq.com/warn: 'baseline-restricted'
    security.kolteq.com/audit: enabled
    security.kolteq.com/enforce: enabled
    security.kolteq.com/warn: enabled
    selinux-role.security.kolteq.com/audit: 'false-true'
    selinux-role.security.kolteq.com/warn: 'false-true'
spec:
  policyName: selinux-role
  validationActions:
  - Deny
  matchResources:
    namespaceSelector:
      matchExpressions:
      - key: selinux-role.security.kolteq.com/enforce
        operator: In
        values:
        - 'true'
